# hyprland-virtual-desktop-manager

./: Cargo.toml  README.md  justfile
src/: main.rs
src/core/: app.rs  clap.rs  config.rs  hyprctl.rs  hyprland.rs  mod.rs  monitor.rs
src/utils/: directory.rs  mod.rs  prompt.rs  terminal_command.rs
